
message Merchant {
    required string public_key = 1;
    
    required string name = 2;
    
    required sint64 timestamp = 3;
}

message MerchantContainer {
    repeated Merchant entries = 1;
}